--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
             <img src="./src/imagens/minato.jpg" alt="Minato Namikaze">
             <span>Minato Namikaze</span>
         </div>
+        <div class="character-preview" onclick="buscarPersonagemComNome('Hashirama Senju')">
+            <img src="./src/imagens/hashirama (1).jpg" alt="Hashirama Senju">
+            <span>Hashirama Senju</span>
+        </div>
+        <div class="character-preview" onclick="buscarPersonagemComNome('Tobirama Senju')">
+            <img src="./src/imagens/tobirama (1).jpg" alt="Tobirama Senju">
+            <span>Tobirama Senju</span>
+        </div>
+        <div class="character-preview" onclick="buscarPersonagemComNome('Hagoromo Ōtsutsuki')">
+            <img src="./src/imagens/hagoromo (1).jpg" alt="Hagoromo Ōtsutsuki">
+            <span>Hagoromo Ōtsutsuki</span>
+        </div>
     </div>
 </body>
 <script src="./src/js/scripit.js"></script>
